@@ -1,3 +1,13 @@
+2009-04-22  Aldy Hernandez  <aldyh@redhat.com>
+
+	* debuglocus.c (init_debuglocus_table): Initialize free_list_idx.
+	(new_debuglocus_entry): Use the free list if available.
+	(debuglocus_free_entry): New.
+	(create_duplicate_debuglocus): 
+	(debuglocus_bitmap_verify): Verify free list.
+	* debuglocus.h (debuglocus_table_d): Add free_list_idx field.
+	(debuglocus_free_entry): New prototype.
+
 2009-04-17  Aldy Hernandez  <aldyh@redhat.com>
 
 	* debuglocus.c (destroy_debuglocus_table): Clear bitmap.
